--- a/poo/index.html
+++ b/poo/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <h1>Esta es mi modificacion a POO</h1>
+
     <ul class="menu">
         <li><a class="menu-item" href="index.html">Programación Orientada a Objetos</a>
             <ul>
