Java and POO example

--- a/poo/poo_teoria/index.html
+++ b/poo/poo_teoria/index.html
@@ -32,6 +32,8 @@
         <h1><strong><center>Paradigma de Programación Orientada a Objectos </center></strong><br>
         </h1>
 
+        <h1>Cambio</h1>
+
         <section id="history">
             <h2> <strong>Historia</strong> </h2>
             <h3> <div align="justify">La programación orientada a objetos (POO) nace en los años 60's en el Norwegian Computing Center (NCC) en la implementación de <i>Simula I</i> por Kristen Nygaard y Ole Johan Dahl.</div> 
