--- a/proglogica/logica_teoria/introduccion.html
+++ b/proglogica/logica_teoria/introduccion.html
@@ -63,7 +63,7 @@
       <div class="inner_cell">
         <div class="text_cell_render border-box-sizing rendered_html">
           <h3 id="Imperativo-vs-Declarativo:">Imperativo vs Declarativo:</h3>
-          <p>Dentro de los paradigmas de programación existen 2 grandes gurpos: que son los <strong>Declarativos</strong> y
+          <p>Dentro de los paradigmas de programación existen 2 grandes grupos: que son los <strong>Declarativos</strong> y
             los <strong>Imperativos</strong>. Las características principales de ellos se ven en el siguiente gráfico.</p>
           <p><img src="imagenes/impdec.PNG" style="max-width:100%; width: 50%; max-width: none"></p>
           <p>
@@ -131,7 +131,7 @@
           <p>
             Sin embargo, la primera propuesta para usar la <i>forma causal de la lógica</i> para representar programas de
             cómputo fue propuesta por <b>Cordell Green</b> en <b>1969</b>. Esto utilizó una axiomatización de un subconjunto
-            de <b>LISP</b>(es una familia de lenguajes de programación de computadora de tipo multiparadigma con una larga
+            de <b>LISP</b> (es una familia de lenguajes de programación de computadora de tipo multiparadigma con una larga
             historia y una sintaxis completamente entre paréntesis), junto con una representación de una relación de entrada-salida,
             para calcular la relación simulando la ejecución del programa en LISP.
           </p>
