--- a/proglogica/logica_teoria/present.html
+++ b/proglogica/logica_teoria/present.html
@@ -77,26 +77,26 @@
                                 </li>
                             </ul>
                         </li>
-                        <li>Lógica
+                        <li>Lógica proposicional:
                             <ul>
                                 <li><a href="https://es.wikipedia.org/wiki/Cl%C3%A1usula_de_Horn">Wikipedia - Clausula de Horn</a></li>
                                 <li><a href="https://es.wikipedia.org/wiki/L%C3%B3gica_de_primer_orden">Wikipedia - Lógica de Primer Orden</a></li>
                                 <li><a href="https://es.wikipedia.org/wiki/L%C3%B3gica_proposicional">Wikipedia - Lógica Proposicional</a></li>
                             </ul>
                         </li>
-                        <li>PROLOG
+                        <li>Prolog:
                             <ul>
                                 <li><a href="https://www.swi-prolog.org">Prolog</a></li>
                                 <li><a href="https://es.wikipedia.org/wiki/Prolog">Wikipedia - Prolog</a></li>
                                 <li><a href="https://www.youtube.com/watch?v=SykxWpFwMGs">YouTube - Prolog Tutorial</a></li>
                             </ul>
                         </li>
-                        <li>Mercury
+                        <li>Mercury:
                             <ul>
                                 <li><a href="https://mercurylang.org/">Mercury</a></li>
                             </ul>
                         </li>
-                        <li>miniKanren
+                        <li>miniKanren:
                             <ul>
                                 <li><a href="http://minikanren.org/">MiniKanren</a></li>
                             </ul>
