--- a/proglogica/logica_teoria/lenguajes.html
+++ b/proglogica/logica_teoria/lenguajes.html
@@ -70,15 +70,13 @@
                     es el que deduce las respuestas a las preguntas que se le plantean, dichas respuestas las deduce
                     del conocimiento obtenido por el conjunto de reglas dadas.</p>
                 <p><img src="imagenes/prologhw.PNG" style="max-width:100%; width: 40%; max-width: none"></p>
-                <ul>
                     <li>Alain Colmerauer y Philippe Roussel (Finales de los 70’s).</li>
                     <li>Proviene del francés PROgrammation en LOGique.</li>
                     <li>Producción interpretada.</li>
-                    <li>Se basa en Lógica de primer órden.</li>
+                    <li>Se basa en Lógica de primer orden.</li>
                     <li>Es declarativo.</li>
                     <li>Backtracking.</li>
-                    <li>Compilador de ProLog online: <a href="https://swish.swi-prolog.org/">https://swish.swi-prolog.org/</a>.<li>
-                </ul>
+                    <li>Compilador de ProLog online: <a href="https://swish.swi-prolog.org/">https://swish.swi-prolog.org/</a>.</li>
                 <h3 id="Mercury">Mercury:</h3>
                 <p>
                     Mercury es un lenguaje de alto nivel (es decir, no se preocupa de problemas como la reserva y liberación de memoria) derivado
@@ -97,11 +95,11 @@
                     como salida el nuevo estado del “mundo” además de otros resultados específicos.</li>
                 <li>
                     La declaración de tipos en Mercury se hace de manera lógica:
-                    <img src="imagenes/mer001.PNG" style="max-width:100%; width: 30%; max-width: none">
+                    <img class="mercury" src="imagenes/mer001.PNG" style="max-width:100%; width: 30%; max-width: none">
                 </li>
                 <li>
                     Se puede predeterminar el número de veces que se va a llamar a un predicado dentro del programa.
-                    <img src="imagenes/mer002.PNG" style="max-width:100%; width: 40%; max-width: none"> “det” indica
+                    <img class="mercury" src="imagenes/mer002.PNG" style="max-width:100%; width: 40%; max-width: none"> “det” indica
                     una vez, “semidet” como mucho una vez, “multi” al menos una vez y “nondet” un número arbitrario de
                     veces El compilador comprobará que se cumple y, en caso contrario, rechazará el programa.
                 </li>
@@ -112,13 +110,13 @@
                     locales al módulo.</li>
                 <li>El compilador genera código muy eficiente.</li>
                 <p><img src="imagenes/mer003.PNG" style="max-width:100%; width: 40%; max-width: none"></p>
-                <ul>
+               
                     <li>Fergus Henderson, Thomas Conway y Zoltan Somogyi (1995).</li>
                     <li>Sintaxis parecida a ProLog.</li>
                     <li>Diseñado para resolver “aplicaciones del mundo real” de forma robusta.</li>
                     <li>Soporta polimorfismo.</li>
                     <li>Un programa escrito en Mercury es más rápido que uno equivalente realizado en Prolog.</li>
-                </ul>
+                
                 <h3 id="CLP-(FD)">CLP (FD)</h3>
                 <p>
                 <p>
@@ -127,8 +125,8 @@
                     de variables” (donde también se especifica su domino), “definición de restricciones” (sobre las
                     variables) y “labeling”, donde se instancian las variables por enumeración.
                 </p>
-                <b>Ejemplo:</b> SEND MORE MONEY puzzle.
-                <img src="imagenes/clp.PNG" style="max-width:100%; width: 50%; max-width: none"></p>
+                <b>Ejemplo:</b> SEND MORE MONEY puzzle:
+                <img class="marginimgs" src="imagenes/clp.PNG" style="max-width:100%; width: 50%; max-width: none"></p>
                 <h3 id="Godel">Godel</h3>
                 <p>
                 <p>
@@ -143,8 +141,8 @@
                     de programas, ya que es mucho más declarativo que Prolog, por ejemplo. Como curiosidad, se puede
                     destacar que este lenguaje no funciona en un entorno Windows.
                 </p>
-                <b>Ejemplo:</b> Máximo Común Divisor
-                <img src="imagenes/godel.PNG" style="max-width:100%; width: 50%; max-width: none"></p>
+                <b>Ejemplo:</b> Máximo Común Divisor:
+                <img class="marginimgs" src="imagenes/godel.PNG" style="max-width:100%; width: 50%; max-width: none"></p>
                 <h3 id="miniKanren">miniKanren</h3>
                 <p>
                 <p>
@@ -192,11 +190,11 @@
 
                 <h3 id="Otros-Ejemplos:">Otros Ejemplos:</h3>
                 <ul>
-                    <li> Grafos dirigidos en Prolog, busqueda de caminos: <img src="imagenes/prolog001.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
-                    <li> Serie Fibonacci en Prolog: <img src="imagenes/prolog002.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
-                    <li> Serie Fibonacci en Mercury: <img src="imagenes/prolog003.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
-                    <li> Juego de ahorcado en ProLog: <img src="imagenes/prolog004.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
-                    <li> Algoritmo merge sort en ProLog: <img src="imagenes/merge3.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
+                    <li> Grafos dirigidos en Prolog, busqueda de caminos: <img class="marginimgs" src="imagenes/prolog001.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
+                    <li> Serie Fibonacci en Prolog: <img class="marginimgs" src="imagenes/prolog002.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
+                    <li> Serie Fibonacci en Mercury: <img class="marginimgs" src="imagenes/prolog003.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
+                    <li> Juego de ahorcado en ProLog: <img class="marginimgs" src="imagenes/prolog004.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
+                    <li> Algoritmo merge sort en ProLog: <img class="marginimgs" src="imagenes/merge3.PNG" style="max-width:100%; width: 80%; max-width: none"></li>
                     <li> <img src="imagenes/sol.PNG" style="max-width:30%; width: 30%; max-width: none"></li>
                 </ul>
 
