--- a/progfun/funcional_teoria/index.html
+++ b/progfun/funcional_teoria/index.html
@@ -471,7 +471,7 @@
                                 listas
                                 infinitas.
 
-                                El uso de Lazy Evaluation permite optimizar el tiempo necesario para realizar computaciones, 
+                                El uso de Lazy Evaluation permite optimizar el tiempo necesario para realizar computaciones. 
                                 multiples plataformas de Big Data, como Apache Spark, hacen uso del paradigma para obtener estos
                                 beneficios. 
                             </li>
