--- a/progfun/funcional_teoria/index.html
+++ b/progfun/funcional_teoria/index.html
@@ -894,7 +894,7 @@
                                 Python es un lenguaje de programación potente y fácil de aprender. Tiene estructuras de datos de alto nivel eficientes y
                                 un simple pero efectivo sistema de programación orientado a objetos. La elegante sintaxis de Python y su tipado
                                 dinámico, junto a su naturaleza interpretada lo convierten en un lenguaje ideal para scripting y desarrollo rápido de
-                                aplicaciones en muchas áreas, para la mayoría de plataformas.
+                                aplicaciones en muchas áreas para la mayoría de plataformas.
 
                                 El ejemplo a continuación ilustra el uso de maps en lugar de iteradores para aplicar funciones a conjuntos de datos.
                             </p>
