--- a/progfun/funcional_teoria/index.html
+++ b/progfun/funcional_teoria/index.html
@@ -545,7 +545,7 @@
                             </li>
                             <li>
                                 El uso de I/O (Archivos, Bases de datos y GUIs) se vuelve un problema. La manipulación de estas entradas y salidas requiere 
-                                del uso de funciones netamente impuras. Un programa que provea utilidad al usuario requerirá, en la gran mayoría de casos, 
+                                de funciones netamente impuras. Un programa que provea utilidad al usuario necesitará, en la gran mayoría de casos, 
                                 acceso a este tipo de entradas y salidas. 
                             </li>
 
