--- a/progfun/funcional_teoria/index.html
+++ b/progfun/funcional_teoria/index.html
@@ -588,7 +588,7 @@
                             el codigo que estemos creando, y
                             a que no tenemos que preocuparnos por cambios que puedan sufrir los objetos a lo largo del
                             programa. Como ventaja adicional,
-                            los objetos que son inmutables, se vuelven automaticamente seguros en el manejo de hilos (o
+                            los objetos que son inmutables, se vuelven automáticamente seguros en el manejo de hilos (o
                             thread-safe) de manera en que pueden
                             ser accedidos de manera concurrente sin presentar ningun tipo de "side effects" debido a que
                             no pueden modificarse.
