--- a/progfun/funcional_teoria/index.html
+++ b/progfun/funcional_teoria/index.html
@@ -604,7 +604,7 @@
                         <p>
                             Dado que en la programacion funcional no existe un estado global no es necesario implementar
                             las tecnicas de paralelismo como
-                            (Multexes , Semaforos ,Locks) por lo cual se pueden ralizar funciones en paralelo siempre que
+                            (Multexes, Semáforos, Locks) por lo cual se pueden realizar funciones en paralelo siempre que
                             estas cumplan con ciertas reglas al
                             momento de su ejecucion
                         </p>
