--- a/progfun/funcional_teoria/index.html
+++ b/progfun/funcional_teoria/index.html
@@ -611,7 +611,7 @@
                         <p>
                             Por otro lado, la concurrencia es mucho más segura, las funciones puras son seguras para hilos (thread-safe), es decir, siempre
                             garantizan que nunca va a suceder que dos procesos concurrentes intenten acceder a los mismos datos al mismo
-                            tiempo. Esto se conoce como condiciones de carrera y es uno de los bugs más dificiles de solucionar, dado que las
+                            tiempo. Esto se conoce como condiciones de carrera y es uno de los bugs más difíciles de solucionar; dado que las
                             funciones puras nunca comparten estados con las demás secciones de un programa nunca tienen condiciones de carrera.
                         </p>
                         <img src="images/Paralelismo.png" class="img-responsive center-block" alt=""
