Add chat example to reactive programming tab
Nicolas Valderrama Solano.
Daniel Perez Mahecha.
Sebastian Garzón Contreras.
José Luis Moreno.

--- a/reactive/reactive_teoria/index.html
+++ b/reactive/reactive_teoria/index.html
@@ -750,6 +750,19 @@
                         <!-- end col -->
                     </div>
                     <!-- end row -->
+                    
+                    <hr>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4 id="line8_5">Ejemplo de chat usando programación reactiva </h4>
+                            <script src="https://gist.github.com/nestorsgarzonc/6e39658f7f354fc497cee69e378833aa.js"></script>
+                            <iframe src="https://reactive-programming-examples.vercel.app/" frameborder="0" height="600" width="350"></iframe>
+
+                        </div>
+                        <!-- end col -->
+                    </div>
+                    <!-- end row -->
 
                     <hr>
 
