--- a/reactive/tutoriales/ReactiveX/index.html
+++ b/reactive/tutoriales/ReactiveX/index.html
@@ -42,7 +42,7 @@
 				<h1>RxJS</h1>
 					<p><span class="image right"><img src="images/pic06.png" alt="" /></span>RxJS (Por sus siglas en Inglés, "Reactive Extensions for JavaScript") es una librería para
 						programación reactiva usando obvservables que hacen más fácil la creación de código asincrono o
-						basado en callbacks </p>
+						basado en callbacks. </p>
 				<ul class="actions">
 					<li><a href="https://rxjs.dev/" class="button scrolly">Documentación Oficial</a></li>
 				</ul>
@@ -52,7 +52,7 @@
 		<!-- Mateo -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+				<!--a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a-->
 				<div class="content">
 					<div class="inner">
 						<h2>ReactiveX y RxJS</h2>
