--- a/reactive/tutoriales/ReactiveX/index.html
+++ b/reactive/tutoriales/ReactiveX/index.html
@@ -86,9 +86,9 @@
 							<dt>Observables</dt>
 							<dd>Representa la colección de futuros valores o eventos invocables.</dd>
 							<dt>Subscribers</dt>
-							<dd>Representa la ejecución de un observable reciiendo la informacipon de este.</dd>
+							<dd>Representa la ejecución de un observable recibiendo la información de este.</dd>
 							<dt>Operators</dt>
-							<dd>Son funciones inspiradas en los metodos de los arreglos tales como <i>map, filter, concat,</i> entre muchas otras.</dd>
+							<dd>Son funciones inspiradas en los métodos de los arreglos tales como <i>map, filter, concat,</i> entre muchas otras.</dd>
 						</dl>
 
 						<ul class="actions">
@@ -170,7 +170,7 @@ checkAuth()
 							y no es muy útil cuando operación asíncronano termina tras un valor.
 							Es allí cuando los <i>Observadores</i> son tan útiles.
 						</p>
-						<h3>RxJS - Observadores</h3>
+						<h3>RxJS - Observables</h3>
 						<p>Como ejemplo tomamos el caso de un botón cualquiera, el cuál puede ser oprimido multiples veces,
 							de forma que el metodo <i>subscribe()</i> se suscribe a todos los eventos reconocidos por el 
 							<i>Observable</i>, reaccionando a cada uno de ellos. Adicionalmente se puede realiza el maenjo
@@ -233,7 +233,7 @@ observable.subscribe(
 										El aprendizaje de la herramienta no es el más sencillo, pero cuenta con una extensa
 										documentación y una gran cantidad de recursos en su página oficial.							
 									</dd>
-									<dt>Actualizaciones periodicas</dt>
+									<dt>Actualizaciones periódicas</dt>
 									<dd>Cuenta con actualizaciones regulares, añadiendo constantemente mejoras y correcion de erroes.</dd>
 								</dl>
 							<h3>Desventajas</h3>
@@ -256,7 +256,7 @@ observable.subscribe(
 										lo que hace que los métodos internos sean accesibles desde el exterior.
 									</dd>
 									<dt>Uso de Observables</dt>
-									<dd>Para el uso de Observables, todo el codigo debe estar bajo los Observables</dd>
+									<dd>Para el uso de Observables, todo el código debe estar bajo los Observables</dd>
 								</dl>
 					</div>
 				</div>
