--- a/reactive/tutoriales/ReactiveX/index.html
+++ b/reactive/tutoriales/ReactiveX/index.html
@@ -385,6 +385,9 @@ rxjs.of(1, 2, 3).pipe(rxjs.map((x) => x + '!!!')); // etc;
 		<!-- Harold -->
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
+				<iframe src="https://stackblitz.com/edit/rxjs-nmbr6s?devToolsHeight=33&embed=1&file=index.ts&hideExplorer=1" frameborder="0" width="100%" height="600px"></iframe>
+			</div>
+			<div class="inner">
 				<h2>Get in touch</h2>
 				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat
 					malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
