--- a/reactive/tutoriales/ReactiveX/index.html
+++ b/reactive/tutoriales/ReactiveX/index.html
@@ -385,76 +385,17 @@ rxjs.of(1, 2, 3).pipe(rxjs.map((x) => x + '!!!')); // etc;
 		<!-- Harold -->
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
+				<h2>Sesión práctica</h2>
+				<h4>Ejemplo 1</h4>
 				<iframe src="https://stackblitz.com/edit/rxjs-nmbr6s?devToolsHeight=33&embed=1&file=index.ts&hideExplorer=1" frameborder="0" width="100%" height="600px"></iframe>
 			</div>
 			<div class="inner">
-				<iframe src="https://stackblitz.com/edit/rxjs-xdnyup?ctl=1&devToolsHeight=33&embed=1&file=index.ts&hideExplorer=1" frameborder="0" width="100%" height="600px"></iframe>
+				<h4>Ejemplo 2</h4>
+				<iframe src="https://stackblitz.com/edit/rxjs-xdnyup?devToolsHeight=33&embed=1&file=index.ts&hideExplorer=1" frameborder="0" width="100%" height="600px"></iframe>
 			</div>
 			<div class="inner">
-				<iframe src="https://stackblitz.com/edit/rxjs-out63p?ctl=1&devToolsHeight=33&embed=1&file=index.ts&hideExplorer=1" frameborder="0" width="100%" height="600px"></iframe>
-			</div>
-
-			<div class="inner">
-				<h2>Get in touch</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat
-					malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-					imperdiet est velit quis lorem.</p>
-				<div class="split style1">
-					<section>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field half">
-									<label for="email">Email</label>
-									<input type="text" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="5"></textarea>
-								</div>
-							</div>
-							<ul class="actions">
-								<li><a href="" class="button submit">Send Message</a></li>
-							</ul>
-						</form>
-					</section>
-					<section>
-						<ul class="contact">
-							<li>
-								<h3>Address</h3>
-								<span>12345 Somewhere Road #654<br />
-									Nashville, TN 00000-0000<br />
-									USA</span>
-							</li>
-							<li>
-								<h3>Email</h3>
-								<a href="#">user@untitled.tld</a>
-							</li>
-							<li>
-								<h3>Phone</h3>
-								<span>(000) 000-0000</span>
-							</li>
-							<li>
-								<h3>Social</h3>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span
-												class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span
-												class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a>
-									</li>
-									<li><a href="#" class="icon brands fa-instagram"><span
-												class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin-in"><span
-												class="label">LinkedIn</span></a></li>
-								</ul>
-							</li>
-						</ul>
-					</section>
-				</div>
+				<h4>Ejemplo 3</h4>
+				<iframe src="https://stackblitz.com/edit/rxjs-out63p?devToolsHeight=33&embed=1&file=index.ts&hideExplorer=1" frameborder="0" width="100%" height="600px"></iframe>
 			</div>
 		</section>
 
